fixed moviecard spacing issue

--- a/src/styles/_movieCard.scss
+++ b/src/styles/_movieCard.scss
@@ -2,9 +2,10 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .cards{
-    max-width: 11rem;
-    max-height: 40rem;
+    max-width: 19.3rem;
+    max-height: 35rem;
 }
